--- a/docs/user.tex
+++ b/docs/user.tex
@@ -41,7 +41,7 @@
 \begin{document}
 \title{Free Pascal :\\ Users' manual}
 \docdescription{Users' manual for \fpc, version \fpcversion}
-\docversion{1.9}
+\docversion{1.10}
 \input{date.inc}
 \author{Micha\"el Van Canneyt\\Florian Kl\"ampfl}
 \maketitle
@@ -1206,7 +1206,7 @@ following:
 than the \var{objfpc} mode, since some \fpc extensions are switched off.
 \item[fpc] free pascal dialect (default)
 \item[gpc] tries to be gpc compatible.
-\item[mac] tries to be compatible to the macintosh pascal dialects.
+\item[macpas] tries to be compatible to the macintosh pascal dialects.
 \item[objfpc] switch some Delphi 2 extensions on. This is different from 
 Delphi mode. because some \fpc constructs are still available.
 \item[tp] tries to be TP/BP 7.0 compatible. This means, no function overloading
