--- a/docs/fpc.sty
+++ b/docs/fpc.sty
@@ -189,7 +189,7 @@
 \newcommand{\ostwo}{\textsc{os/2}\xspace}
 \newcommand{\windows}{\textsc{Windows}\xspace}
 \newcommand{\windowsnt}{\textsc{Windows NT}\xspace}
-\newcommand{\macos}{\textsc{mac OS}\xspace}
+\newcommand{\macos}{{Mac OS}\xspace}
 \newcommand{\fpc}{Free Pascal\xspace}
 \newcommand{\gnu}{\textsc{gnu}\xspace}
 \newcommand{\atari}{\textsc{Atari}\xspace}
@@ -207,7 +207,7 @@
 %
 % Some versions
 %
-\newcommand{\fpcversion}{1.9.2}
+\newcommand{\fpcversion}{1.9.4}
 %
 % PDF support
 %
