+ First page no longer empty

--- a/docs/chart.tex
+++ b/docs/chart.tex
@@ -5,7 +5,8 @@
 \newcommand{\var}[1]{{\texttt #1}}
 \usepackage{tabularx}
 \begin{document}
-\section*{Compiler options and command-line switches}
+\thispagestyle{empty}
+%\section*{Compiler options and command-line switches}
 \subsection*{Local compiler switches}
 %\begin{table}
 %\caption[b]{Local compiler switches.}
