+ Small nuance in thread availability

--- a/docs/prog.tex
+++ b/docs/prog.tex
@@ -4742,7 +4742,8 @@ reloaded by program code into the menus \dots
 \section{Introduction}
 \fpc supports thread programming: There is a language construct 
 available for thread-local storage (\var{ThreadVar}), and cross-platform
-low-level thread routines are available.
+low-level thread routines are available for those operating systems that
+support threads.
 
 The compiler must be told to enable threading in a program. This is done 
 using the \var{\{\$THREADING\}} directive:
