--- a/install/debian/changelog
+++ b/install/debian/changelog
@@ -1,3 +1,9 @@
+fpc (1.9.5-0) unstable; urgency=low
+
+  * Snapshot build
+
+ -- Peter Vreman <peter@freepascal.org>  Thu, 30 May 2004 12:00:00 +0100
+
 fpc (1.9.4-0.1) unstable; urgency=low
 
   * New release
