Fixed typo, bug #3319

--- a/docs/ref.tex
+++ b/docs/ref.tex
@@ -1161,7 +1161,7 @@ After a call to \var{SetLength}, valid array indexes are 0 to 999: the array
 index is always zero-based.
 
 Note that the length of the array is set in elements, not in bytes of 
-allocated mmemory (although these may be the same). The amount of 
+allocated memory (although these may be the same). The amount of 
 memory allocated is the size of the array multiplied by the size of 
 1 element in the array. The memory will be disposed of at the exit of the
 current procedure or function. 
